# CalendarAppBackend/Models/LoginRequest.cs
@@ -1,0 +1,8 @@
+namespace CalendarAppBackend.Models
+{
+    public class LoginRequest
+    {
+        public string Username { get; set; } = string.Empty;
+        public string Password { get; set; } = string.Empty;
+    }
+}
