# CalendarAppBackend/Models/RegisterRequest.cs
@@ -1,0 +1,8 @@
+namespace CalendarAppBackend.Models
+{
+    public class RegisterRequest
+    {
+        public string Username { get; set; } = string.Empty;
+        public string Password { get; set; } = string.Empty;
+    }
+}
